--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
 	id 'java'
 }
 
+apply plugin: 'idea'
+
 group = 'com.soap'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
@@ -25,7 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security:'
-
+	implementation 'org.springframework.boot:spring-boot-starter-json'
+	//쿼리 파라미터 로그
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
 
@@ -35,6 +39,7 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
+	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
