--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-json'
 	//쿼리 파라미터 로그
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
-	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
-	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
+	compile(group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2') {
+		exclude module: 'swagger-annotations' exclude module: 'swagger-models'
+	}
+	compile("io.swagger:swagger-annotations:1.5.21")
+	compile("io.swagger:swagger-models:1.5.21")
+	compile(group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2')
 
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa'
