--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
         default-page-size: 20
         max-page-size: 2000
 
-#  h2:
-#    console:
-#      enabled: true
+  h2:
+    console:
+      enabled: true
 
   datasource:
     url: jdbc:h2:tcp://localhost/~/moon
