--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,38 +1,41 @@
+#spring:
+#  devtools:
+#    restart:
+#      enabled: true
+#  profiles:
+#    active: local
+#  data:
+#    web:
+#      pageable:
+#        default-page-size: 20
+#        max-page-size: 2000
+#
+#  h2:
+#    console:
+#      enabled: true
+#
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/moon
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: create-drop
+#    properties:
+#      hibernate:
+#        # show_sql: true
+#        format_sql: true
+#        default_batch_fetch_size: 1000
+#    open-in-view: false
+#
+#logging.level:
+#  org.hibernate.SQL: debug
+#  #org.hibernate.type: trace
+#
+#server:
+#  port: 8080
 spring:
-  devtools:
-    restart:
-      enabled: true
-  profiles:
-    active: local
-  data:
-    web:
-      pageable:
-        default-page-size: 20
-        max-page-size: 2000
+  profiles: dev
 
-  h2:
-    console:
-      enabled: true
-
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/moon
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        # show_sql: true
-        format_sql: true
-        default_batch_fetch_size: 1000
-    open-in-view: false
-
-logging.level:
-  org.hibernate.SQL: debug
-  #org.hibernate.type: trace
-
-server:
-  port: 8080
