--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,6 @@ gradle-app.setting
 **/build/
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij,windows
+
+### Custom ###
+/src/main/resources/application-secret.yml
