--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -7,6 +7,8 @@ jwt:
 
 sns:
   google:
+    userinfo:
+      url: https://www.googleapis.com/oauth2/v2/userinfo
     token:
       url: https://oauth2.googleapis.com/token
     url: https://accounts.google.com/o/oauth2/v2/auth
