--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security:'
 	implementation 'org.springframework.boot:spring-boot-starter-json'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation 'org.apache.httpcomponents:httpclient:4.5'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	//쿼리 파라미터 로그
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
 	compile(group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2') {
 		exclude module: 'swagger-annotations' exclude module: 'swagger-models'
 	}
+
+	implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
+
+	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compile("io.swagger:swagger-annotations:1.5.21")
 	compile("io.swagger:swagger-models:1.5.21")
 	compile(group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2')
@@ -51,7 +56,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
-	compile 'org.springframework.boot:spring-boot-starter-oauth2-client'
+//	compile 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
