--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 		exclude module: 'swagger-annotations' exclude module: 'swagger-models'
 	}
 
-	implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
+	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
 
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compile("io.swagger:swagger-annotations:1.5.21")
@@ -60,7 +60,6 @@ dependencies {
 	compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
-
 }
 
 test {
