--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	}
 
 	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
 
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compile("io.swagger:swagger-annotations:1.5.21")
