--- a/build.gradle
+++ b/build.gradle
@@ -35,23 +35,28 @@ dependencies {
 	compile(group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2') {
 		exclude module: 'swagger-annotations' exclude module: 'swagger-models'
 	}
-
 	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 
 	compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compile("io.swagger:swagger-annotations:1.5.21")
 	compile("io.swagger:swagger-models:1.5.21")
 	compile(group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2')
-
 	//querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa'
 	//쿼리 파라미터 로그
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
-	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
+
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
+	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.1.0"
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+	compile group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
+
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -60,6 +65,10 @@ dependencies {
 	compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	testCompileOnly ('org.projectlombok:lombok') // 테스트 의존성 추가
+	testAnnotationProcessor('org.projectlombok:lombok') // 테스트 의존성 추가
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
 }
 
 test {
@@ -81,4 +90,20 @@ configurations {
 compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
 }
+
+project.afterEvaluate {
+	project.tasks.compileQuerydsl.options.compilerArgs = [
+			"-proc:only",
+			"-processor", project.querydsl.processors() +
+					',lombok.launch.AnnotationProcessorHider$AnnotationProcessor'
+	]
+}
 //querydsl 추가 끝
+
+compileJava {
+	options.compilerArgs += [
+			'-Amapstruct.suppressGeneratorTimestamp=true',
+			'-Amapstruct.suppressGeneratorVersionInfoComment=true',
+			'-Amapstruct.verbose=true'
+	]
+}
