--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
+	compile group: 'net.nurigo', name: 'javaSDK', version: '2.2'
+
 	testCompileOnly ('org.projectlombok:lombok') // 테스트 의존성 추가
 	testAnnotationProcessor('org.projectlombok:lombok') // 테스트 의존성 추가
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
